--- a/css/common.css
+++ b/css/common.css
@@ -14,12 +14,19 @@ h1, h2 { font-family: 'Space Mono', monospace; }
 
 p { margin-bottom: 1.75rem; }
 
+a { 
+  color: #000;
+  text-decoration: underline;
+}
+
+a:hover { color: #000; }
+
 body {
   background-image: 
     url('../assets/mobile-background-top.svg'),
     url('../assets/mobile-background-middle.svg'),
     url('../assets/mobile-background-bottom.svg');
-  background-position: center -4%, center center, center bottom;
+  background-position: center -200px, center center, center bottom;
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
   line-height: 28px;
@@ -62,7 +69,10 @@ header { margin: 3.73rem 0; }
 }
 
 
-  footer a { color: #1b1c2f; }
+  footer a { 
+    color: #1b1c2f; 
+    text-decoration: none;
+  }
 
   footer a:hover {
     text-decoration: none;
