--- a/css/article4.css
+++ b/css/article4.css
@@ -1,5 +1,5 @@
 @import url('article2.css');
 
-.arcitle-lead { padding-bottom: 3.75rem; }
+.article-lead { padding-bottom: 3.75rem; }
 
 figure:first-of-type { margin-bottom: 0; }
